# rsaber

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
android/: Cargo.toml  build.rs
android/src/: asset.rs  lib.rs
asset/shader/: p_grid.wgsl  p_simplec.wgsl  pn_phongc.wgsl
asset_src/: cube.blend  saber.blend
lib/: Cargo.toml  build.rs
lib/asset/shader/: p_grid.wgsl  p_simplec.wgsl  p_window.wgsl  pn_phongc.wgsl
lib/src/: asset.rs  circbuf.rs  indexmap.rs  lib.rs  mailbox.rs  render.rs  songdef.rs  songinfo.rs  tests.rs  util.rs
lib/src/audio/: engine.rs  fader.rs  file.rs  mod.rs
lib/src/model/: mesh.rs  mod.rs  modelrender.rs  obj.rs  shader.rs
lib/src/model/repo/: cube.rs  floor.rs  mod.rs  pointer.rs  saber.rs  window.rs
lib/src/net/: assetfile.rs  beatsaver.rs  image.rs  mod.rs  netmanager.rs  songzip.rs
lib/src/output/: mod.rs  window.rs  xr.rs
lib/src/scene/: mod.rs  scenemanager.rs
lib/src/scene/repo/: game.rs  menu.rs  mod.rs
lib/src/ui/: mod.rs  slintimpl.rs  subr.rs  uimanager.rs
lib/ui/: AboutWindow.slint  Const.slint  GameStatsWindow.slint  PoweredByWindow.slint  SearchWindow.slint  StatsWindow.slint  VirtualKeyboardWindow.slint  WindowBase.slint  ui.slint
pc/: Cargo.toml
pc/src/: asset.rs  main.rs
pcvr/: Cargo.toml
pcvr/src/: asset.rs  main.rs
