[package]

name = "rsaber_android"
edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

android-activity = {version = "0.6.0", features = ["native-activity"]}
openxr = {version = "0.19.0", features = ["loaded"]}
slint = {version = "1.14.1", default-features = false, features = ["backend-android-activity-06"]} # TODO: If this is missing, then slint build fails, why?

rsaber_lib = {path = "../lib", version = "0.3.0", features = ["xr"]}

[lib]

crate-type = ["cdylib"]

[features]

test = ["rsaber_lib/test"]
