[package]

name = "rsaber_android"
edition.workspace = true
description.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

android-activity = {version = "=0.6.0", features = ["native-activity"]} # TODO: Investigate startup issue with 0.6.1
slint = {version = "<1.16.0", default-features = false, features = ["backend-android-activity-06"]} # TODO: If this is missing, then slint build fails, why?

rsaber_lib = {path = "../lib", version = "0.5.0", features = ["xr", "xr_loaded"]}

[lib]

crate-type = ["cdylib"]

[features]

test = ["rsaber_lib/test"]
