[package]

name = "rsaber_lib"
edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

ash = {version = "0.38.0", optional = true}
atomic_enum = "0.3.0"
bytemuck = {version = "1.23.1", features = ["aarch64_simd", "avx512_simd"]}
cfg-if = "1.0.1"
cgmath = "0.18.0"
cpal = {package = "rsaber_hackedcpal", version = "0.1.0"}
oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
openxr = {version = "0.19.0", optional = true}
rand = "0.9.2"
rubato = "0.16.2"
rust-embed = {version = "8.7.2", features = ["debug-embed"]}
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
slint = {version = "1.14.1", default-features = false, features = ["compat-1-2", "renderer-software", "std"]}
symphonia = {version = "0.5.4", default-features = false, features = ["mp3", "ogg", "vorbis", "opt-simd"]}
wgpu = {version = "28.0.0", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"]}

[target.'cfg(target_os = "android")'.dependencies]

android-activity = {version = "0.6.0", features = ["native-activity"]}

[build-dependencies]

slint-build = "1.14.1"

[features]

window = []
xr = ["dep:ash", "dep:openxr"]
