[package]

name = "rsaber_lib"
edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

ash = {version = "0.38.0", optional = true}
atomic = "0.6.1"
audioadapter-buffers = "2.0.0"
bytemuck = {version = "1.23.1", features = ["aarch64_simd", "avx512_simd", "derive"]}
cfg-if = "1.0.1"
cgmath = "0.18.0"
cpal = {package = "rsaber_hackedcpal", version = "0.1.0"}
image = "0.25.9"
num_enum = "0.7.5"
oneshot = {version = "0.1.11", default-features = false, features = ["std"]}
openxr = {version = "0.19.0", optional = true}
rand = "0.9.2"
reqwest = {version = "0.13.1", default-features = false, features = ["http2", "json", "query", "rustls"]}
rubato = "1.0.0"
rust-embed = {version = "8.7.2", features = ["debug-embed"]}
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
slint = {version = "1.15.0", default-features = false, features = ["compat-1-2", "renderer-software", "std"]}
symphonia = {version = "0.5.4", default-features = false, features = ["mp3", "ogg", "vorbis", "opt-simd"]}
tokio = {version = "1.49.0", default-features = false, features = ["rt-multi-thread"]} # TODO: parking_lot?
url = {version = "2.5.8", features = ["serde"]}
wgpu = {version = "28.0.0", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"]}
zip = "8.0.0"

[target.'cfg(target_os = "android")'.dependencies]

android-activity = {version = "0.6.0", features = ["native-activity"]}
webpki-root-certs = "1.0.5"

[build-dependencies]

slint-build = "1.15.0"

[features]

window = []
xr = ["dep:ash", "dep:openxr"]
test = []
