[package]

name = "rsaber_lib"
edition.workspace = true
description.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

ash = {version = "0.38.0", optional = true}
atomic = "0.6.1"
bytemuck = {version = "1.23.1", features = ["aarch64_simd", "avx512_simd", "derive"]} # TODO: must_cast feature
cgmath = "0.18.0" # TODO: seems to be unmaintained, look for alternative
cpal = {package = "rsaber_hackedcpal", version = "0.2.0", features = ["audio_thread_priority", "pipewire"]}
image = "0.25.9"
num_enum = "0.7.5"
oneshot = {version = "0.2.1", default-features = false, features = ["std"]}
openxr = {version = "0.21.1", optional = true}
pulp = {version = "0.22.2", features = ["x86-v4"]} # TODO: Switch to portable simd, once it is stabilized
rand = "0.10.0"
reqwest = {version = "0.13.1", default-features = false, features = ["http2", "json", "query", "rustls"]}
rubato = "2.0.0"
rust-embed = {version = "8.7.2", features = ["debug-embed"]}
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
slint = {version = "<1.16.0", default-features = false, features = ["compat-1-2", "renderer-software", "std"]} # TODO: Investigate issues with 1.16.0
symphonia = {version = "0.6.0", default-features = false, features = ["mp3", "ogg", "vorbis", "opt-simd"]}
tokio = {version = "1.49.0", default-features = false, features = ["parking_lot", "rt-multi-thread"]}
url = {version = "2.5.8", features = ["serde"]}
wgpu = {version = "29.0.0", default-features = false, features = ["std", "parking_lot", "vulkan", "wgsl"]}
zip = "8.0.0"

[target.'cfg(target_os = "android")'.dependencies]

android-activity = {version = "0.6.0", features = ["native-activity"]}
webpki-root-certs = "1.0.5"

[build-dependencies]

slint-build = "<1.16.0"

[features]

window = []

xr = ["dep:ash", "dep:openxr"]
xr_loaded = ["openxr?/loaded"]
xr_linked = ["openxr?/linked", "openxr?/static"]

test = []
