[package]

name = "rsaber_pc"
edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

cgmath = "0.18.0"
pollster = "0.4.0"
wgpu = {version = "28.0.0", default-features = false}
winit = "0.30.11"

rsaber_lib = {path = "../lib", version = "0.3.0", features = ["window"]}
