[package]

name = "rsaber_pc"
edition.workspace = true
description.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

pollster = "0.4.0"
winit = "0.30.11"

rsaber_lib = {path = "../lib", version = "0.5.0", features = ["window"]}

[features]

test = ["rsaber_lib/test"]
