[package]

name = "rsaber_pcvr"
edition.workspace = true
description.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

openxr = {version = "0.19.0", features = ["linked", "static"]}

rsaber_lib = {path = "../lib", version = "0.1.0", features = ["xr"]}
