[package]

name = "rsaber_pcvr"
edition.workspace = true
description.workspace = true
version.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

rsaber_lib = {path = "../lib", version = "0.5.0", features = ["xr", "xr_linked"]}

[features]

test = ["rsaber_lib/test"]
